name:                cryptodiner
version:             0.1.0.0
synopsis:            A Haskell implementation of Chaum's dining cryptographers protocol.
-- description:
homepage:            http://github.com/joashc/cryptodiner
license:             GPL-3
license-file:        LICENSE
author:              joashc
maintainer:          joash.is@gmail.com
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable cryptodiner
   main-is:            main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base,
                       bytestring,
                       binary,
                       MonadRandom,
                       random,
                       crypto-random,
                       DRBG,
                       network,
                       cereal,
                       lens,
                       free,
                       mtl,
                       stm

  hs-source-dirs:      crypto, network
  default-language:    Haskell2010
